fix: remove non-essential changes from repository-pattern PR
- Restore enrichAppointmentDtos calls in AppointmentsResource; fix the
  remaining direct Group.list() call in that method via GroupRepository
- Restore getMessages identity enrichment (sender names) in MessageService
- Restore sendMessage sender name in MessageResource
- Restore GroupService.searchGroups with member name enrichment; revert
  GroupsResource to delegate back to groupService instead of groupQueryService
- Revert AdminUserService/AdminUserResource unused lastSeenAfter/lastSeenBefore params
- Restore found.getFirst() in FriendshipService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>